included fallback fonts and avoided potential margin collapse

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 }
 
 .page__body {
-  font-family: Avenir, sans-serif;
+  font-family: Avenir, "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
 }
 
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 20px auto 0;
+  padding-top: 20px;
 }
 
 .search-bar-big {
